fix: adjust user page spacing

--- a/src/components/layout/Header/header.scss
+++ b/src/components/layout/Header/header.scss
@@ -25,7 +25,7 @@
 .header__left {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 160px;
 
     @include mobile {
         gap: 16px;
@@ -61,8 +61,7 @@
 .header__search {
     display: flex;
     align-items: center;
-    max-width: 400px;
-    width: 100%;
+    width: 400px;
 
     @include mobile {
         display: none;
@@ -116,7 +115,7 @@
 .header__right {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
 
     @include mobile {
         gap: 16px;
@@ -183,6 +182,7 @@
     font-size: $font-size-base;
     font-weight: $font-medium;
     color: $text-primary;
+    text-transform: capitalize;
 
     @include mobile {
         display: none;
